# FrameProcessor

./: README.md
FrameProcessor/: CMakeLists.txt  README.md  build.gradle  build.gradle.kts  copy_opencv.ps1  settings.gradle  settings.gradle.kts
FrameProcessor/app/: CMakeLists.txt  build.gradle  build.gradle.kts
FrameProcessor/app/jni/: edge_processor.cpp
FrameProcessor/app/src/androidTest/java/com/example/frameprocessor/: ExampleInstrumentedTest.kt
FrameProcessor/app/src/main/: AndroidManifest.xml
FrameProcessor/app/src/main/cpp/: CMakeLists.txt  edge_detector.cpp  edge_detector.h  edge_detector_jni.cpp
FrameProcessor/app/src/main/java/com/example/frameprocessor/: EdgeDetector.java  EdgeProcessor.java  GLRenderer.java  MainActivity.java
FrameProcessor/app/src/main/java/com/example/frameprocessor/ui/theme/: Color.kt  Theme.kt  Type.kt
FrameProcessor/app/src/main/res/layout/: activity_main.xml
FrameProcessor/app/src/main/res/values/: strings.xml  themes.xml
FrameProcessor/app/src/test/java/com/example/frameprocessor/: ExampleUnitTest.kt
FrameProcessor/gradle/: libs.versions.toml
FrameProcessor/gradle/wrapper/: gradle-wrapper.properties
FrameProcessor/jni/: edge_processor.cpp
FrameProcessor/opencv/: build.gradle
FrameProcessor/opencv/src/main/java/org/opencv/android/: BaseLoaderCallback.java  InstallCallbackInterface.java  LoaderCallbackInterface.java  OpenCVLoader.java
FrameProcessor/opencv/src/main/res/values/: attrs.xml
